fix layout issue of browsing items

--- a/app/assets/stylesheets/layouts.css.scss
+++ b/app/assets/stylesheets/layouts.css.scss
@@ -34,12 +34,11 @@ body {
 .category {
     margin-bottom: 0px;
     font-size: 16px;
-    padding: 10px;
+    padding: 8px;
     float: left;
     margin-bottom: 20px;
 
     li {
-        padding: 10px;
         text-align: center;
     }
 }
